# Course_work_3_Morozov

./: README.md  config.py  pyproject.toml
src/: main.py  utils.py
src/models/: operation.py
tests/: test_utils.py
